# LAB2_POK-Cmake-Make-Bash-Ninja

./: README.md  a.out  compile.sh  main  makefile
examples/: main.cpp  makefile
mystring/: .ninja_log  CMakeLists.txt  build.ninja  compile.sh  makefile
mystring/examples/: CMakeLists.txt  main  main.cpp  makefile
zip2/: CMakeLists.txt  compile.sh  makefile
zip2/examples/: CMakeLists.txt  makefile
